--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -115,8 +115,12 @@
                     </p>
                     <p>
                         <a href="/kindex">
-                            <img src="/content/Img/kindex-info.png" style="width:100%;" title="Popis K-Indexu" />
+                            <img src="/content/Img/kindex-info.png" style="width:80%;" title="Popis K-Indexu" />
                         </a>
+                    </p>
+                    <p>
+                        <a href="https://texty.hlidacstatu.cz/k-index/">S podporou Active Citizens Fund a Norských fondů.</a><a href="https://texty.hlidacstatu.cz/k-index-watchdog-bravely-monitors-public-corruption/"><img src="/Content/Img/en.png" style="height:13px;width:20px;vertical-align:baseline" /></a>
+                        <a href="https://texty.hlidacstatu.cz/k-index/"><img src="/Content/Img/acf.jpg" style="width:90%;height:auto;" /></a>
                     </p>
                 </div>
             </div>
