--- a/Web.Statu/Views/Kindex/Index.cshtml
+++ b/Web.Statu/Views/Kindex/Index.cshtml
@@ -44,13 +44,17 @@
                     Index korupčního rizika - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejných peněz.
                 </p>
                 <p>
-                    <img src="/content/Img/kindex-info.png" style="width:100%;" title="Popis K-Indexu" />
+                    <img src="/content/Img/kindex-info.png" style="width:80%;" title="Popis K-Indexu" />
+                </p>
+                <p>
+                    <a href="https://texty.hlidacstatu.cz/k-index/"><img src="/Content/Img/acf.jpg" style="width:90%;height:auto;" /></a>
                 </p>
             </div>
-
             <div class="block-button-wrapper">
-                <a href="@HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.GetKratkaMetodikaURL()" class="btn btn-default btn-default-new">Stručný popis K-Indexu</a>
+                <a href="@HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.GetKratkaMetodikaURL()" class="btn btn-default btn-default-new btn-sm">Stručný popis K-Indexu</a>
+                <a href="https://texty.hlidacstatu.cz/k-index-otazky-a-odpovedi/" class="btn btn-default btn-default-new btn-sm">Otázky &Aacute; odpovědi</a>
             </div>
+
         </div>
 
         <!-- Žebříček -->
