--- a/Web.Statu/Views/Home/Subjekt_Profile.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Profile.cshtml
@@ -387,13 +387,13 @@ else
                                                 rdsbezCenyPerY, "%", xValueFormat: "{value:%Y}")
                                         ) }
                         </div>
-                        @if (Model.PatrimStatu() && summarryAfter2016.PocetSmluvPolitiky > 0)
+                        @if (Model.PatrimStatu() && summarryAfter2016.PocetSmluvSponzorujiciFirmy > 0)
                         {
                             <div class="col-xs-12 col-sm-6 col-md-4">
                                 @{ ReportDataSource rdsPolitikPerYKc = ReportDataSource.SimpleReportDataForDateChart("Rok", "Hodnota smluv",
                                         statistics
                                         .Where(k => k.Year >= chartMinDate && k.Year <= chartMaxDate)
-                                        .ToDictionary(k => new DateTime(k.Year, 1, 1), v => (decimal)v.Value.SumKcSmluvPolitiky)
+                                        .ToDictionary(k => new DateTime(k.Year, 1, 1), v => (decimal)v.Value.SumKcSmluvSponzorujiciFirmy)
                                         );
 
                                     @UtilChart.RenderReportChart("Hodnota smluv s vazbou na politiky", UtilChart.SimpleBarChart(
@@ -439,7 +439,7 @@ else
             }
 
             @if (Model.PatrimStatu() 
-                && summarryAfter2016.PocetSmluvPolitiky > 0)
+                && summarryAfter2016.PocetSmluvSponzorujiciFirmy > 0)
             {
                 
                 <tr>
@@ -464,9 +464,9 @@ else
                                 {
                                     <tr>
                                         <td>@bs.Year</td>
-                                        <td class="number">@bs.Value.PocetSmluvPolitiky</td>
+                                        <td class="number">@bs.Value.PocetSmluvSponzorujiciFirmy</td>
                                         <td class="number">@bs.Value.PercentSmluvPolitiky.ToString("P2")</td>
-                                        <td class="number">@Html.Raw(HlidacStatu.Util.RenderData.ShortNicePrice(bs.Value.SumKcSmluvPolitiky, html: true))</td>
+                                        <td class="number">@Html.Raw(HlidacStatu.Util.RenderData.ShortNicePrice(bs.Value.SumKcSmluvSponzorujiciFirmy, html: true))</td>
                                         <td class="number">@bs.Value.PercentKcSmluvPolitiky.ToString("P2")</td>
                                     </tr>
                                 }
@@ -474,9 +474,9 @@ else
                             <tfoot>
                                 <tr>
                                     <th>Celkem</th>
-                                    <th class="number">@summarryAfter2016.PocetSmluvPolitiky</th>
+                                    <th class="number">@summarryAfter2016.PocetSmluvSponzorujiciFirmy</th>
                                     <th class="number">@summarryAfter2016.PercentSmluvPolitiky.ToString("P2")</th>
-                                    <th class="number">@Html.Raw(HlidacStatu.Util.RenderData.ShortNicePrice(summarryAfter2016.SumKcSmluvPolitiky, html: true))</th>
+                                    <th class="number">@Html.Raw(HlidacStatu.Util.RenderData.ShortNicePrice(summarryAfter2016.SumKcSmluvSponzorujiciFirmy, html: true))</th>
                                     <th class="number">@summarryAfter2016.PercentKcSmluvPolitiky.ToString("P2")</th>
                                 </tr>
                             </tfoot>
